# driver-hos-logbook

./: README.md
be/driver_hos_logbook/: .gitignore  build.sh  manage.py  pyproject.toml
be/driver_hos_logbook/driver_hos_logbook/: asgi.py  urls.py  wsgi.py
be/driver_hos_logbook/driver_hos_logbook/apps/driver_hos_logbook/: admin.py  apps.py  models.py  serializers.py  tests.py  utils.py  views.py
be/driver_hos_logbook/driver_hos_logbook/apps/driver_hos_logbook/migrations/: 0001_initial.py
be/driver_hos_logbook/driver_hos_logbook/base/: models.py
be/driver_hos_logbook/driver_hos_logbook/settings/: __init__.py  settings.py
be/driver_hos_logbook/driver_hos_logbook/settings/envs/: base.py
fe/driver_hos_logbook/: example.env.txt  package-lock.json  package.json  tsconfig.json
fe/driver_hos_logbook/app/: globals.css  layout.tsx  page.tsx
fe/driver_hos_logbook/components/layout/Nav/: index.tsx  types.tsx
fe/driver_hos_logbook/components/main/DailyLogsPanel/: index.tsx  types.tsx
fe/driver_hos_logbook/components/main/DailyLogsPanel/DayLog/: index.tsx  types.ts
fe/driver_hos_logbook/components/main/DailyLogsPanel/EmptyState/: index.tsx
fe/driver_hos_logbook/components/main/DailyLogsPanel/LogGrid/: index.tsx  types.ts
fe/driver_hos_logbook/components/main/DailyLogsPanel/Remarks/: index.tsx  types.ts
fe/driver_hos_logbook/components/main/DailyLogsPanel/StatCard/: index.tsx  types.ts
fe/driver_hos_logbook/components/main/MapPanel/: index.tsx  types.tsx
fe/driver_hos_logbook/components/main/MapPanel/EmptyState/: index.tsx
fe/driver_hos_logbook/components/main/MapPanel/ErrorState/: index.tsx
fe/driver_hos_logbook/components/main/MapPanel/LoadingState/: index.tsx
fe/driver_hos_logbook/components/main/RecentTripsSection/: index.tsx  types.tsx
fe/driver_hos_logbook/components/main/TripDashboard/: index.tsx
fe/driver_hos_logbook/components/main/TripFormSection/: index.tsx  types.tsx  useTripForm.ts
fe/driver_hos_logbook/components/ui/: index.tsx  spinner.tsx
fe/driver_hos_logbook/lib/network/: client.ts  requests.ts  routes.ts
fe/driver_hos_logbook/types/: common.ts
